# algomanim

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: README.md  examples.py
src/algomanim/: __init__.py  algomanim.py  utils.py
src/algomanim/core/: __init__.py  algo_scene.py  base.py  code_block_base.py  code_generator.py  linear_container.py  node_structure.py  rectangle_cells.py  relative_text_base.py  updatable.py
src/algomanim/core/paths/: __init__.py  hl_rect.py  semi_rounded_rectangle.py
src/algomanim/datastructures/: array.py  linked_list.py  string.py
src/algomanim/examples/: examples.py  rend_no_poetry.sh  rend_poetry.sh
src/algomanim/helpers/: __init__.py  datastructures.py  parsing.py  visual.py
src/algomanim/ui/: __init__.py  code_block.py  relative_text.py  titles.py
tests/: test_algomanim.py  test_color_blending.py
